logs/Slang/chapter-6/6.16.15--string_realtoa.sv.log
name: string_realtoa
description: string.realtoa()  tests
should_fail: 0
tags: 6.16.15
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.15--string_realtoa.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.15--string_realtoa.sv:10:4: error: invalid member access for type 'string'
		a.realtoa(4.76);
		~^~~~~~~~
